--- a/rewise-app/src/ui/pages/LibraryPage.ui
+++ b/rewise-app/src/ui/pages/LibraryPage.ui
@@ -13,170 +13,236 @@
   <property name="windowTitle">
    <string>LibraryPage</string>
   </property>
-
-  <layout class="QVBoxLayout" name="rootLayout">
-   <property name="leftMargin"><number>12</number></property>
-   <property name="topMargin"><number>12</number></property>
-   <property name="rightMargin"><number>12</number></property>
-   <property name="bottomMargin"><number>12</number></property>
-   <property name="spacing"><number>10</number></property>
-
-   <!-- messageHost: сюда кодом вставим InlineMessageWidget -->
+  <layout class="QVBoxLayout" name="rootLayout" stretch="1,13">
+   <property name="spacing">
+    <number>10</number>
+   </property>
+   <property name="leftMargin">
+    <number>12</number>
+   </property>
+   <property name="topMargin">
+    <number>12</number>
+   </property>
+   <property name="rightMargin">
+    <number>12</number>
+   </property>
+   <property name="bottomMargin">
+    <number>12</number>
+   </property>
    <item>
-    <widget class="QWidget" name="messageHost">
-     <layout class="QVBoxLayout" name="messageHostLayout">
-      <property name="leftMargin"><number>0</number></property>
-      <property name="topMargin"><number>0</number></property>
-      <property name="rightMargin"><number>0</number></property>
-      <property name="bottomMargin"><number>0</number></property>
-      <property name="spacing"><number>0</number></property>
-     </layout>
-    </widget>
+    <layout class="QHBoxLayout" name="topBar">
+     <property name="spacing">
+      <number>10</number>
+     </property>
+     <property name="sizeConstraint">
+      <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
+     </property>
+     <property name="leftMargin">
+      <number>0</number>
+     </property>
+     <property name="topMargin">
+      <number>0</number>
+     </property>
+     <property name="bottomMargin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="lblAppTitle">
+       <property name="styleSheet">
+        <string notr="true">font-size: 18px; font-weight: 800; color: #1F2430;</string>
+       </property>
+       <property name="text">
+        <string>Rewise</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="spacerTop">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QWidget" name="messageHost" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>560</width>
+         <height>150</height>
+        </size>
+       </property>
+       <layout class="QVBoxLayout" name="messageHostLayout">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+       </layout>
+      </widget>
+     </item>
+    </layout>
    </item>
-
    <item>
     <widget class="QSplitter" name="splitterMain">
-     <property name="orientation"><enum>Qt::Horizontal</enum></property>
-     <property name="childrenCollapsible"><bool>false</bool></property>
-     <property name="handleWidth"><number>10</number></property>
-     <property name="opaqueResize"><bool>true</bool></property>
-
-     <!-- LEFT: folders -->
+     <property name="orientation">
+      <enum>Qt::Orientation::Horizontal</enum>
+     </property>
      <widget class="QGroupBox" name="gbFolders">
-      <property name="minimumSize"><size><width>260</width><height>0</height></size></property>
-      <property name="title"><string>Папки</string></property>
+      <property name="title">
+       <string>Папки</string>
+      </property>
       <layout class="QVBoxLayout" name="foldersLayout">
-       <property name="leftMargin"><number>10</number></property>
-       <property name="topMargin"><number>12</number></property>
-       <property name="rightMargin"><number>10</number></property>
-       <property name="bottomMargin"><number>10</number></property>
-       <property name="spacing"><number>8</number></property>
-
+       <property name="spacing">
+        <number>8</number>
+       </property>
        <item>
         <widget class="QListView" name="lvFolders">
-         <property name="selectionMode"><enum>QAbstractItemView::SingleSelection</enum></property>
-         <property name="editTriggers">
-          <set>QAbstractItemView::NoEditTriggers</set>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::SelectionMode::SingleSelection</enum>
          </property>
-         <property name="uniformItemSizes"><bool>true</bool></property>
         </widget>
        </item>
-
        <item>
-        <layout class="QGridLayout" name="foldersButtonsGrid">
-         <property name="horizontalSpacing"><number>6</number></property>
-         <property name="verticalSpacing"><number>6</number></property>
-         <item row="0" column="0" colspan="2">
+        <layout class="QHBoxLayout" name="foldersButtonsRow">
+         <item>
           <widget class="QPushButton" name="btnAddFolder">
-           <property name="text"><string>Добавить</string></property>
+           <property name="text">
+            <string>Добавить</string>
+           </property>
           </widget>
          </item>
-         <item row="1" column="0">
+         <item>
           <widget class="QPushButton" name="btnRenameFolder">
-           <property name="text"><string>Переименовать</string></property>
+           <property name="text">
+            <string>Переименовать</string>
+           </property>
           </widget>
          </item>
-         <item row="1" column="1">
+         <item>
           <widget class="QPushButton" name="btnDeleteFolder">
-           <property name="text"><string>Удалить</string></property>
+           <property name="text">
+            <string>Удалить</string>
+           </property>
           </widget>
          </item>
         </layout>
        </item>
-
       </layout>
      </widget>
-
-     <!-- RIGHT: cards -->
      <widget class="QGroupBox" name="gbCards">
-      <property name="title"><string>Карточки</string></property>
+      <property name="title">
+       <string>Карточки</string>
+      </property>
       <layout class="QVBoxLayout" name="cardsLayout">
-       <property name="leftMargin"><number>10</number></property>
-       <property name="topMargin"><number>12</number></property>
-       <property name="rightMargin"><number>10</number></property>
-       <property name="bottomMargin"><number>10</number></property>
-       <property name="spacing"><number>8</number></property>
-
+       <property name="spacing">
+        <number>8</number>
+       </property>
        <item>
         <widget class="QLineEdit" name="leSearch">
-         <property name="placeholderText"><string>Поиск по вопросу/ответу…</string></property>
-         <property name="clearButtonEnabled"><bool>true</bool></property>
+         <property name="placeholderText">
+          <string>Поиск по вопросу/ответу…</string>
+         </property>
         </widget>
        </item>
-
        <item>
         <widget class="QTableView" name="tvCards">
-         <property name="selectionBehavior"><enum>QAbstractItemView::SelectRows</enum></property>
-         <property name="selectionMode"><enum>QAbstractItemView::SingleSelection</enum></property>
-         <property name="sortingEnabled"><bool>true</bool></property>
-         <property name="showGrid"><bool>false</bool></property>
-         <property name="editTriggers">
-          <set>QAbstractItemView::NoEditTriggers</set>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::SelectionMode::SingleSelection</enum>
          </property>
-         <property name="alternatingRowColors"><bool>false</bool></property>
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
+         </property>
+         <property name="sortingEnabled">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
-
        <item>
         <layout class="QHBoxLayout" name="cardsButtonsRow">
-         <property name="spacing"><number>8</number></property>
          <item>
           <widget class="QPushButton" name="btnAddCard">
-           <property name="text"><string>Добавить</string></property>
+           <property name="text">
+            <string>Добавить</string>
+           </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnEditCard">
-           <property name="text"><string>Редактировать</string></property>
+           <property name="text">
+            <string>Редактировать</string>
+           </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnDeleteCard">
-           <property name="text"><string>Удалить</string></property>
+           <property name="text">
+            <string>Удалить</string>
+           </property>
           </widget>
          </item>
          <item>
           <spacer name="spacerCardsRow">
-           <property name="orientation"><enum>Qt::Horizontal</enum></property>
-           <property name="sizeHint" stdset="0"><size><width>40</width><height>20</height></size></property>
+           <property name="orientation">
+            <enum>Qt::Orientation::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
           </spacer>
          </item>
          <item>
           <widget class="QPushButton" name="btnStartReview">
-           <property name="text"><string>Начать повторение</string></property>
+           <property name="text">
+            <string>Начать повторение</string>
+           </property>
           </widget>
          </item>
         </layout>
        </item>
-
        <item>
         <widget class="QTextBrowser" name="tbPreview">
-         <property name="minimumSize"><size><width>0</width><height>160</height></size></property>
-         <property name="openExternalLinks"><bool>false</bool></property>
-         <property name="frameShape"><enum>QFrame::NoFrame</enum></property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>140</height>
+          </size>
+         </property>
+         <property name="openExternalLinks">
+          <bool>false</bool>
+         </property>
         </widget>
        </item>
-
       </layout>
      </widget>
-
     </widget>
    </item>
-
   </layout>
  </widget>
  <resources/>
  <connections/>
- <tabstops>
-  <tabstop>leSearch</tabstop>
-  <tabstop>tvCards</tabstop>
-  <tabstop>btnAddCard</tabstop>
-  <tabstop>btnEditCard</tabstop>
-  <tabstop>btnDeleteCard</tabstop>
-  <tabstop>btnStartReview</tabstop>
-  <tabstop>lvFolders</tabstop>
-  <tabstop>btnAddFolder</tabstop>
-  <tabstop>btnRenameFolder</tabstop>
-  <tabstop>btnDeleteFolder</tabstop>
- </tabstops>
 </ui>
